crates/wolf_parse/tests/snapshots/diagnostics__e0202_unclosed_brace.snap
---
source: crates/wolf_parse/tests/diagnostics.rs
expression: "format!(\"{d:#?}\")"
---
Diagnostic {
    code: "E0202",
    severity: Error,
    span: Span {
        file: FileId(
            0,
        ),
        lo: 7,
        hi: 8,
    },
    message: "unclosed `{`",
    notes: [
        (
            Span {
                file: FileId(
                    0,
                ),
                lo: 9,
                hi: 9,
            },
            "expected the closing delimiter by here",
        ),
    ],
}
