crates/wolf_parse/tests/snapshots/diagnostics__e0203_keyword_typo.snap
---
source: crates/wolf_parse/tests/diagnostics.rs
expression: "format!(\"{d:#?}\")"
---
Diagnostic {
    code: E0203,
    severity: Error,
    message: "`fnn` is not how a declaration starts — did you mean `fn`?",
    primary: LabeledSpan {
        span: Span {
            file: FileId(
                0,
            ),
            lo: 0,
            hi: 3,
        },
        label: "",
    },
    secondary: [],
    notes: [],
    suggestions: [
        Suggestion {
            message: "replace `fnn` with `fn`",
            edits: [
                (
                    Span {
                        file: FileId(
                            0,
                        ),
                        lo: 0,
                        hi: 3,
                    },
                    "fn",
                ),
            ],
            applicability: MachineApplicable,
        },
    ],
}
