crates/wolf_parse/tests/snapshots/diagnostics__e0204_attr_garbage.snap
---
source: crates/wolf_parse/tests/diagnostics.rs
expression: "format!(\"{d:#?}\")"
---
Diagnostic {
    code: E0204,
    severity: Error,
    message: "this attribute needs a name: `#[name]` or `#[name(args)]`",
    primary: LabeledSpan {
        span: Span {
            file: FileId(
                0,
            ),
            lo: 2,
            hi: 3,
        },
        label: "",
    },
    secondary: [],
    notes: [],
    suggestions: [],
}
