crates/wolf_parse/tests/snapshots/diagnostics__e0205_bad_generics.snap
---
source: crates/wolf_parse/tests/diagnostics.rs
expression: "format!(\"{d:#?}\")"
---
Diagnostic {
    code: E0205,
    severity: Error,
    message: "expected a generic parameter name here, like `T` or `N: type`",
    primary: LabeledSpan {
        span: Span {
            file: FileId(
                0,
            ),
            lo: 5,
            hi: 6,
        },
        label: "",
    },
    secondary: [],
    notes: [],
    suggestions: [],
}
