crates/wolf_parse/tests/snapshots/diagnostics__e0206_missing_type.snap
---
source: crates/wolf_parse/tests/diagnostics.rs
expression: "format!(\"{d:#?}\")"
---
Diagnostic {
    code: E0206,
    severity: Error,
    message: "expected a type",
    primary: LabeledSpan {
        span: Span {
            file: FileId(
                0,
            ),
            lo: 7,
            hi: 7,
        },
        label: "",
    },
    secondary: [],
    notes: [],
    suggestions: [],
}
