crates/wolf_parse/tests/snapshots/diagnostics__e0208_assign_in_expr.snap
---
source: crates/wolf_parse/tests/diagnostics.rs
expression: "format!(\"{d:#?}\")"
---
Diagnostic {
    code: E0208,
    severity: Error,
    message: "assignment is a statement, so `=` produces no value here",
    primary: LabeledSpan {
        span: Span {
            file: FileId(
                0,
            ),
            lo: 20,
            hi: 21,
        },
        label: "this `=` cannot be part of an expression",
    },
    secondary: [],
    notes: [
        "if you meant to compare, write `==`. If you meant to assign, do it on its own line first ([gram.expr.assign]).",
    ],
    suggestions: [],
}
