crates/wolf_parse/tests/snapshots/diagnostics__e0209_negative_index.snap
---
source: crates/wolf_parse/tests/diagnostics.rs
expression: "format!(\"{d:#?}\")"
---
Diagnostic {
    code: E0209,
    severity: Error,
    message: "wolf has no negative indexing",
    primary: LabeledSpan {
        span: Span {
            file: FileId(
                0,
            ),
            lo: 19,
            hi: 21,
        },
        label: "did you mean `^1`?",
    },
    secondary: [],
    notes: [
        "wolf counts from the end with `^`: `s[^1]` is the last element, `s[1..^1]` trims one from each side (D25).",
    ],
    suggestions: [
        Suggestion {
            message: "index from the end: `^1`",
            edits: [
                (
                    Span {
                        file: FileId(
                            0,
                        ),
                        lo: 19,
                        hi: 20,
                    },
                    "^",
                ),
            ],
            applicability: MachineApplicable,
        },
    ],
}
