crates/wolf_parse/tests/snapshots/diagnostics__e0210_moded_receiver.snap
---
source: crates/wolf_parse/tests/diagnostics.rs
expression: "format!(\"{d:#?}\")"
---
Diagnostic {
    code: E0210,
    severity: Error,
    message: "`mut` marks a method receiver, but no method call follows the `)`",
    primary: LabeledSpan {
        span: Span {
            file: FileId(
                0,
            ),
            lo: 17,
            hi: 24,
        },
        label: "",
    },
    secondary: [],
    notes: [],
    suggestions: [],
}
