crates/wolf_parse/tests/snapshots/diagnostics__e0211_inner_attr_in_block.snap
---
source: crates/wolf_parse/tests/diagnostics.rs
expression: "format!(\"{d:#?}\")"
---
Diagnostic {
    code: E0211,
    severity: Error,
    message: "a file-wide `#![…]` attribute must be the first thing in its file — move it above the first declaration",
    primary: LabeledSpan {
        span: Span {
            file: FileId(
                0,
            ),
            lo: 13,
            hi: 16,
        },
        label: "",
    },
    secondary: [],
    notes: [],
    suggestions: [],
}
